force-app/main/default/objects/Booking__c/fields/Agreement_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Amount_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement Amount Received</label>
    <type>Checkbox</type>
</CustomField>