force-app/main/default/objects/Booking__c/fields/Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Status__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Sale_Agreement_Date__c)),
    &quot;Agreement Done&quot;,
    IF(
        (Now() - CreatedDate) &lt; 30,
        &quot;Agreement Pending &lt;30&quot;,
        IF(
            (Now() - CreatedDate) &lt; 60,
            &quot;Agreement Pending &lt;60&quot;,
            &quot;Agreement Pending &gt;60&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Status</label>
    <type>Text</type>
</CustomField>