force-app/main/default/objects/Booking__c/fields/Amount_By_Customer__c.field-meta.xml
<CustomField>
    <fullName>Amount_By_Customer__c</fullName>
    <label>Amount By Customer</label>
    <summarizedField>Receipt__c.Amount_By_Customer__c</summarizedField>
    <summaryFilterItems>
        <field>Receipt__c.Approval_status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Receipt__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>