force-app/main/default/objects/Booking__c/fields/Amount_INR__c.field-meta.xml
<CustomField>
    <fullName>Amount_INR__c</fullName>
    <label>Amount(INR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>