force-app/main/default/objects/Booking__c/fields/Amount_Pending__c.field-meta.xml
<CustomField>
    <fullName>Amount_Pending__c</fullName>
    <label>Amount Pending</label>
    <length>255</length>
    <type>Text</type>
</CustomField>