force-app/main/default/objects/Booking__c/fields/Assignment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Amount__c</fullName>
    <formula>Rate_per_sqft__c *  Assignment_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>