force-app/main/default/objects/Booking__c/fields/Assignment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Fee__c</fullName>
    <label>Assignment Fee Per Sqft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>