force-app/main/default/objects/Booking__c/fields/Authorized_Signato__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Signato__c</fullName>
    <label>Authorized Signatory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MR. Varghese Oonni, GM – HR &amp;Admin</fullName>
            </value>
            <value>
                <fullName>Mr. Purushotham C. Reddy, GM Finance</fullName>
            </value>
            <value>
                <fullName>Ms.Bojamma K M, Manager-CRM</fullName>
            </value>
            <value>
                <fullName>Mr. Vadivel V, Senior Manager Accounts &amp; Audit</fullName>
            </value>
            <value>
                <fullName>Mr. Shyam Ramji</fullName>
            </value>
            <value>
                <fullName>Ms. Mini Rajavarma- Head- Customer Loyalty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>