force-app/main/default/objects/Booking__c/fields/Authorized_Signatory_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Signatory_Resolution_Date__c</fullName>
    <defaultValue>DATE(2025, 11, 11)</defaultValue>
    <label>Authorized Signatory Resolution Date</label>
    <type>Date</type>
</CustomField>