force-app/main/default/objects/Booking__c/fields/Backend_String__c.field-meta.xml
<CustomField>
    <fullName>Backend_String__c</fullName>
    <label>Backend String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>