force-app/main/default/objects/Booking__c/fields/Bank_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bank_Amount__c</fullName>
    <label>Bank Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>