force-app/main/default/objects/Booking__c/fields/Bank_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Bank_Contact_Person__c</fullName>
    <label>Bank Contact Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>