force-app/main/default/objects/Booking__c/fields/Bank_Log_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Bank_Log_in_Date__c</fullName>
    <label>Bank Log in Date</label>
    <type>DateTime</type>
</CustomField>