force-app/main/default/objects/Booking__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SBI</fullName>
            </value>
            <value>
                <fullName>Navi</fullName>
            </value>
            <value>
                <fullName>HDFC</fullName>
            </value>
            <value>
                <fullName>Tata Capital</fullName>
            </value>
            <value>
                <fullName>IIFL</fullName>
            </value>
            <value>
                <fullName>LT</fullName>
                <label>L&amp;T</label>
            </value>
            <value>
                <fullName>Union Bank</fullName>
            </value>
            <value>
                <fullName>Canara</fullName>
            </value>
            <value>
                <fullName>Shriram</fullName>
            </value>
            <value>
                <fullName>PNB</fullName>
            </value>
            <value>
                <fullName>Bajaj</fullName>
            </value>
            <value>
                <fullName>ICICI</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Piramal</fullName>
            </value>
            <value>
                <fullName>Allahabad Bank</fullName>
            </value>
            <value>
                <fullName>Indian</fullName>
            </value>
            <value>
                <fullName>Anand Rathi</fullName>
            </value>
            <value>
                <fullName>Axis</fullName>
            </value>
            <value>
                <fullName>Godrej</fullName>
            </value>
            <value>
                <fullName>BOI</fullName>
            </value>
            <value>
                <fullName>Karnataka Bank</fullName>
            </value>
            <value>
                <fullName>Central bank</fullName>
            </value>
            <value>
                <fullName>Yes Bank</fullName>
            </value>
            <value>
                <fullName>Bank Of Maharashtra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>