force-app/main/default/objects/Booking__c/fields/Banker_Name__c.field-meta.xml
<CustomField>
    <fullName>Banker_Name__c</fullName>
    <label>Banker Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>