force-app/main/default/objects/Booking__c/fields/Banker_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Banker_Phone_Number__c</fullName>
    <label>Banker Phone Number</label>
    <type>Phone</type>
</CustomField>