force-app/main/default/objects/Booking__c/fields/Basic_cost_with_CP__c.field-meta.xml
<CustomField>
    <fullName>Basic_cost_with_CP__c</fullName>
    <formula>Quote__r.Basic_cost_with_CP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Basic cost with CP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>