force-app/main/default/objects/Booking__c/fields/Beneficiary_Name__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Name__c</fullName>
    <formula>if(ISPICKVAL(Project__c,&apos;Ashiyana&apos;),IF(OR(Block_ID__c = &apos;a03GC00007hCkW3&apos;,Block_ID__c = &apos;a03GC00007hYOMS&apos;),&apos;SPIPL Ashiyana Phase I Master Escrow A/C&apos;,Plot__r.Project__r.Beneficiary_Name__c),Plot__r.Project__r.Beneficiary_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beneficiary Name</label>
    <type>Text</type>
</CustomField>