force-app/main/default/objects/Booking__c/fields/Block_ID__c.field-meta.xml
<CustomField>
    <fullName>Block_ID__c</fullName>
    <formula>IF(
NOT(ISBLANK(Plot__r.Tower1__c)),
Plot__r.Tower1__c,
Plot__r.Block1__r.Id
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Block ID</label>
    <type>Text</type>
</CustomField>