force-app/main/default/objects/Booking__c/fields/Block_Number__c.field-meta.xml
<CustomField>
    <fullName>Block_Number__c</fullName>
    <formula>Plot__r.Block1__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Block Number</label>
    <type>Text</type>
</CustomField>