force-app/main/default/objects/Booking__c/fields/Block_Text__c.field-meta.xml
<CustomField>
    <fullName>Block_Text__c</fullName>
    <label>Block Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>