force-app/main/default/objects/Booking__c/fields/Booking_Created_Date_Auto__c.field-meta.xml
<CustomField>
    <fullName>Booking_Created_Date_Auto__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Created Date (Auto)</label>
    <type>DateTime</type>
</CustomField>