force-app/main/default/objects/Booking__c/fields/Booking_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Booking_Unique_ID__c</fullName>
    <externalId>true</externalId>
    <label>Booking Unique ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>