force-app/main/default/objects/Booking__c/fields/Bookings__c.field-meta.xml
<CustomField>
    <fullName>Bookings__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bookings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>