force-app/main/default/objects/Booking__c/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <label>Branch Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Banaswadi</fullName>
            </value>
            <value>
                <fullName>Basavangudi</fullName>
            </value>
            <value>
                <fullName>HSR</fullName>
            </value>
            <value>
                <fullName>Kormangala</fullName>
            </value>
            <value>
                <fullName>Malleshwaram</fullName>
            </value>
            <value>
                <fullName>Shankarpuram</fullName>
            </value>
            <value>
                <fullName>St marks</fullName>
            </value>
            <value>
                <fullName>WhiteField</fullName>
            </value>
            <value>
                <fullName>Yelahanka</fullName>
            </value>
            <value>
                <fullName>Mysuru</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>