force-app/main/default/objects/Booking__c/fields/Builder_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Builder_Account_Number__c</fullName>
    <formula>if(ISPICKVAL(Project__c,&apos;Ashiyana&apos;),IF(OR(Block_ID__c = &apos;a03GC00007hCkW3&apos;,Block_ID__c = &apos;a03GC00007hYOMS&apos;),&apos;57500000803410&apos;,Plot__r.Project__r.Account_Number__c),Plot__r.Project__r.Account_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Builder Account Number</label>
    <type>Text</type>
</CustomField>