force-app/main/default/objects/Booking__c/fields/Building_No__c.field-meta.xml
<CustomField>
    <fullName>Building_No__c</fullName>
    <formula>Plot__r.Block1__r.Building__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building No</label>
    <type>Text</type>
</CustomField>