force-app/main/default/objects/Booking__c/fields/Built_up_areaSwap__c.field-meta.xml
<CustomField>
    <fullName>Built_up_areaSwap__c</fullName>
    <label>Built up area Swap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>