force-app/main/default/objects/Booking__c/fields/Car_Parks__c.field-meta.xml
<CustomField>
    <fullName>Car_Parks__c</fullName>
    <label>Car Parks</label>
    <length>20</length>
    <type>Text</type>
</CustomField>