force-app/main/default/objects/Booking__c/fields/Car_Scooter_ParkingSwap__c.field-meta.xml
<CustomField>
    <fullName>Car_Scooter_ParkingSwap__c</fullName>
    <label>Car/Scooter Parking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>