force-app/main/default/objects/Booking__c/fields/CIN_Number__c.field-meta.xml
<CustomField>
    <fullName>CIN_Number__c</fullName>
    <formula>Plot__r.Project__r.CIN_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CIN Number</label>
    <type>Text</type>
</CustomField>