force-app/main/default/objects/Booking__c/fields/Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Address__c</fullName>
    <formula>Plot__r.Project__r.Company_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Address</label>
    <type>Text</type>
</CustomField>