force-app/main/default/objects/Booking__c/fields/Contact_Number1__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number1__c</fullName>
    <label>Not Used Contact Number</label>
    <type>Phone</type>
</CustomField>