force-app/main/default/objects/Booking__c/fields/Country1__c.field-meta.xml
<CustomField>
    <fullName>Country1__c</fullName>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>