force-app/main/default/objects/Booking__c/fields/CP_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>CP_Name_Text__c</fullName>
    <label>CP Name Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>