force-app/main/default/objects/Booking__c/fields/Date_of_Booking__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Booking__c</fullName>
    <label>Date of Booking  (as per Booking Form)</label>
    <type>Date</type>
</CustomField>