force-app/main/default/objects/Booking__c/fields/Demand_Amount__c.field-meta.xml
<CustomField>
    <fullName>Demand_Amount__c</fullName>
    <formula>(Demanded_Amount__c / Total_Cost_Ex_Leg_Main__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demand Amount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>