force-app/main/default/objects/Booking__c/fields/Demanded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Demanded_Amount__c</fullName>
    <label>Demanded Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>