force-app/main/default/objects/Booking__c/fields/Difference_Amount__c.field-meta.xml
<CustomField>
    <fullName>Difference_Amount__c</fullName>
    <formula>Refund__c- Total_Refunded_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>