force-app/main/default/objects/Booking__c/fields/Direct_CP__c.field-meta.xml
<CustomField>
    <fullName>Direct_CP__c</fullName>
    <label>Direct/CP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>