force-app/main/default/objects/Booking__c/fields/East_By__c.field-meta.xml
<CustomField>
    <fullName>East_By__c</fullName>
    <formula>Plot__r.East_By__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>East By</label>
    <type>Text</type>
</CustomField>