force-app/main/default/objects/Booking__c/fields/EB_GST_18__c.field-meta.xml
<CustomField>
    <fullName>EB_GST_18__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GST Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>