force-app/main/default/objects/Booking__c/fields/Email1__c.field-meta.xml
<CustomField>
    <fullName>Email1__c</fullName>
    <defaultValue>&apos;Helpdesk.kar@sowparnika.com&apos;</defaultValue>
    <label>Mail CC User</label>
    <type>Email</type>
</CustomField>