force-app/main/default/objects/Booking__c/fields/Email_id__c.field-meta.xml
<CustomField>
    <fullName>Email_id__c</fullName>
    <label>Not Used</label>
    <type>Email</type>
</CustomField>