force-app/main/default/objects/Booking__c/fields/Emailn__c.field-meta.xml
<CustomField>
    <fullName>Emailn__c</fullName>
    <label>Not Used</label>
    <type>Email</type>
</CustomField>