force-app/main/default/objects/Booking__c/fields/Extra_car_parking_charges__c.field-meta.xml
<CustomField>
    <fullName>Extra_car_parking_charges__c</fullName>
    <formula>Quote__r.Extra_car_parking_charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extra car parking charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>