force-app/main/default/objects/Booking__c/fields/Flat_Unit__c.field-meta.xml
<CustomField>
    <fullName>Flat_Unit__c</fullName>
    <formula>IF(Property_TypeFor__c == &apos;Villa&apos;,&apos;Villa&apos;,&apos;Flat&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flat/Unit</label>
    <type>Text</type>
</CustomField>