force-app/main/default/objects/Booking__c/fields/Floor_Rise_Charges_from_6th_Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor_Rise_Charges_from_6th_Floor__c</fullName>
    <formula>Plot__r.Floor_Rise__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor Rise Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>