force-app/main/default/objects/Booking__c/fields/Forfeit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forfeit_Amount__c</fullName>
    <formula>Plot__r.Project__r.Forfeit_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forfeit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>