force-app/main/default/objects/Booking__c/fields/FRC_Swap__c.field-meta.xml
<CustomField>
    <fullName>FRC_Swap__c</fullName>
    <formula>Swap_Unit__r.Floor_Rise__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FRC Swap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>