force-app/main/default/objects/Booking__c/fields/GRAND_TOTAL__c.field-meta.xml
<CustomField>
    <fullName>GRAND_TOTAL__c</fullName>
    <formula>Total_Cost_of_the_Flat__c + GST_5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GRAND TOTAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>