force-app/main/default/objects/Booking__c/fields/GST_5__c.field-meta.xml
<CustomField>
    <fullName>GST_5__c</fullName>
    <formula>( Total_Cost_of_the_Flat__c * 5) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST 5%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>