force-app/main/default/objects/Booking__c/fields/IFSC_Code__c.field-meta.xml
<CustomField>
    <fullName>IFSC_Code__c</fullName>
    <formula>Plot__r.Project__r.IFSC_code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IFSC Code</label>
    <type>Text</type>
</CustomField>