force-app/main/default/objects/Booking__c/fields/Is_CRM_Manager__c.field-meta.xml
<CustomField>
    <fullName>Is_CRM_Manager__c</fullName>
    <formula>CRM_Manager__r.Id ==  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is CRM Manager</label>
    <type>Checkbox</type>
</CustomField>