force-app/main/default/objects/Booking__c/fields/Is_Legal__c.field-meta.xml
<CustomField>
    <fullName>Is_Legal__c</fullName>
    <formula>Legal_Team__r.Id ==  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Legal</label>
    <type>Checkbox</type>
</CustomField>