force-app/main/default/objects/Booking__c/fields/Labour_Cess__c.field-meta.xml
<CustomField>
    <fullName>Labour_Cess__c</fullName>
    <formula>IF(ISPICKVAL(Property_Type__c,&apos;Villa&apos;),0,(Basic_Price__c  * 0.7)/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Labour Cess</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>