force-app/main/default/objects/Booking__c/fields/Landmark_Parking_Type__c.field-meta.xml
<CustomField>
    <fullName>Landmark_Parking_Type__c</fullName>
    <formula>TEXT(Quote__r.Landmark_Parking_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Landmark Parking Type</label>
    <type>Text</type>
</CustomField>