force-app/main/default/objects/Booking__c/fields/lead1__c.field-meta.xml
<CustomField>
    <fullName>lead1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ZLead</label>
    <referenceTo>lead__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>