force-app/main/default/objects/Booking__c/fields/Legal_Team__c.field-meta.xml
<CustomField>
    <fullName>Legal_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Team</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings4</relationshipName>
    <type>Lookup</type>
</CustomField>