force-app/main/default/objects/Booking__c/fields/Loan_By__c.field-meta.xml
<CustomField>
    <fullName>Loan_By__c</fullName>
    <label>Loan By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self Banker</fullName>
            </value>
            <value>
                <fullName>Self Funding</fullName>
            </value>
            <value>
                <fullName>CP Banker</fullName>
            </value>
            <value>
                <fullName>In House Banker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>